# Geometria

./: CMakeLists.txt  ElementsTests.cpp  ElementsTests.h  main.cpp
Elements/: Point.cpp  Point.h  Segment.cpp  Segment.h  Vector.cpp  Vector.h
